--- a/EXEMPLO-FUNCAO/index.html
+++ b/EXEMPLO-FUNCAO/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exemplo Prompt</title>
+    <title>Exemplo Soma</title>
 </head>
 <body>
     <p id="resultado"></p>
-    <script src="script.js"></script>
+    <script src="script.js">
+    </script>
 </body>
 </html>
